--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <title>Website Makalah</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Selamat Datang di Website Makalah</h2>
-    <p>Pilih menu di bawah untuk melanjutkan:</p>
+    <div class="container">
+        <h2>Login ke Web Makalah</h2>
+        <form onsubmit="return checkLogin()">
+            <label>Username:</label><br>
+            <input type="text" id="username" placeholder="Masukkan username" required><br><br>
+            
+            <label>Password:</label><br>
+            <input type="password" id="password" placeholder="Masukkan password" required><br><br>
+            
+            <button type="submit">Login</button>
+        </form>
+    </div>
 
-    <nav>
-      <ul>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="data diri.html">Data Diri</a></li>
-        <li><a href="logout.html">Logout</a></li>
-        <li><a href="materi.html">Materi</a></li>
-      </ul>
-    </nav>
-  </div>
+    <script>
+        function checkLogin() {
+            const user = document.getElementById("username").value;
+            const pass = document.getElementById("password").value;
+
+            if (user === "angga" && pass === "12345") {
+                window.location.href = "index.html"; // pindah ke halaman utama
+                return false;
+            } else {
+                alert("Username atau password salah!");
+                return false;
+            }
+        }
+    </script>
 </body>
 </html>
