Update and rename data diri.html to data-diri.html

--- a/data-diri.html
+++ b/data-diri.html
@@ -2,12 +2,12 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Data Diri</title>
+    <title>Data-Diri</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h2>Data Diri</h2>
+        <h2>Data-Diri</h2>
         <p>Nama: Angga Januarta</p>
         <p>NPM: 2024510019</p>
         <p>Prodi: Sistem Informasi</p>
@@ -15,4 +15,5 @@
         <p><a href="index.html">Kembali ke Halaman Utama</a></p>
     </div>
 </body>
+
 </html>
